--- a/view/frontend/web/template/payment/cashpresso.html
+++ b/view/frontend/web/template/payment/cashpresso.html
@@ -11,7 +11,7 @@
                name="payment[method]"
                class="radio"
                data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
-        <label data-bind="attr: {'for': getCode()}" class="label"><span data-bind="text: getTitle()"></span></label>
+        <label data-bind="attr: {'for': getCode()}" class="label"><span data-bind="text: getTitle()"></span><span id="cashpresso-availability-banner"></span></label>
     </div>
 
     <div class="payment-method-content">
