--- a/view/frontend/templates/catalog/footer_script.phtml
+++ b/view/frontend/templates/catalog/footer_script.phtml
@@ -9,7 +9,7 @@
 <script id="c2<?php echo $block->getConfig()->getWidgetType() ? '' : 'Static' ?>LabelScript" type="text/javascript"
         src="<?php echo $block->getConfig()->getJsLabelScript() ?>"
         defer
-        data-c2-partnerApiKey="<?php echo $block->getConfig()->getAPIKey() ?>"
+        data-c2-partnerApiKey="<?php echo $block->getConfig()->getAPIKey($block->getStoreId()) ?>"
         data-c2-interestFreeDaysMerchant="<?php echo $block->getConfig()->getInterestFreeDay() ?>"
         data-c2-mode="<?php echo $block->getConfig()->getMode() ? 'live' : 'test' ?>"
         data-c2-locale="<?php echo $block->getLocale() ?>"
