--- a/view/frontend/templates/checkout/footer_script.phtml
+++ b/view/frontend/templates/checkout/footer_script.phtml
@@ -7,7 +7,7 @@
 <script id="c2CheckoutScript" type="text/javascript"
         src="<?php echo $block->getConfig()->getJsCheckoutScript() ?>"
         defer
-        data-c2-partnerApiKey="<?php echo $block->getConfig()->getAPIKey() ?>"
+        data-c2-partnerApiKey="<?php echo $block->getConfig()->getAPIKey($block->getStoreId()) ?>"
         data-c2-interestFreeDaysMerchant="<?php echo $block->getConfig()->getInterestFreeDay() ?>"
         data-c2-mode="<?php echo $block->getConfig()->getMode() ? 'live' : 'test' ?>"
         data-c2-locale="<?php echo $block->getLocale() ?>"
