--- a/view/frontend/templates/catalog/footer_script.phtml
+++ b/view/frontend/templates/catalog/footer_script.phtml
@@ -11,7 +11,7 @@
         defer
         data-c2-partnerApiKey="<?php echo $block->getConfig()->getAPIKey() ?>"
         data-c2-interestFreeDaysMerchant="<?php echo $block->getConfig()->getInterestFreeDay() ?>"
-        data-c2-mode="<?php echo $block->getConfig()->getMode() ? 'live' : 'test' ?>"
+        data-c2-mode="<?php echo $block->getConfig()->getModeString() ?>"
         data-c2-locale="<?php echo $block->getLocale() ?>"
         data-c2-email="<?php echo  $customer->getEmail() ?>"
         data-c2-given="<?php echo  $customer->getFirstname() ?>"
